Fix overflow issue - link element

--- a/src/components/sidebars/left-side-bar/LeftSidebar.module.css
+++ b/src/components/sidebars/left-side-bar/LeftSidebar.module.css
@@ -10,6 +10,7 @@
     top: 0;
     border-right: 1px rgb(209, 202, 202) solid;
     background-color: #0b0e1f;
+    overflow: hidden;
 }
 
 .innerContainer {
@@ -17,6 +18,7 @@
     flex: 1;
     flex-direction: column;
     height: 100%;
+    overflow: hidden;
 }
 
 .draggerContainer {
@@ -82,6 +84,7 @@
     margin-top: 50px;
     cursor: pointer;
     height: 100%;
+    overflow: hidden;
 }
 
 .link:hover {
@@ -95,11 +98,13 @@
 }
 
 .link {
+    box-sizing: border-box;
     display: flex;
     flex: 1;
     flex-direction: row;
     align-items: center;
     width: 100%;
+    max-width: 208px !important;
     padding: 20px;
     padding-bottom: 5px;
     padding-top: 5px;
